fixed the image stretch on the project page and error om the preloader

--- a/src/Components/Cards/ProjectCard.css
+++ b/src/Components/Cards/ProjectCard.css
@@ -1,19 +1,19 @@
 .project-card {
-  max-width: 400px;
-  height: 250px;
+  max-width: 450px;
+  max-height: 250px;
   border-radius: 10px;
   position: relative;
 }
-.project-card:hover .overlay-info{
+.project-card:hover .overlay-info {
   opacity: 1;
 }
 .project-card .cardImg-container {
-  border-radius: 10px;
   height: 100%;
 }
 .project-card img {
   width: 100%;
-  height: 100%;
+  max-height: 100%;
+  height: auto;
   border-radius: 10px;
 }
 
@@ -28,32 +28,43 @@
   padding: 20px;
   opacity: 0;
   transition: opacity 0.3s;
+  font-size: 16px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 .overlay-info .title {
   color: #fff;
-  font-family: 'Roboto Condensed', sans-serif;
+  font-family: "Roboto Condensed", sans-serif;
   text-transform: capitalize;
+  font-size: 1.5em;
 }
 .overlay-info .stacks {
   color: #aaa;
-  font-family: 'Roboto Mono', monospace;
+  font-family: "Roboto Mono", monospace;
   text-transform: capitalize;
+  font-size: 1em;
 }
 .overlay-info .description {
-  margin-top: 20px;
-  margin-bottom: 10px;
   color: #f1f1f1;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
+  font-size: 1em;
 }
 
-.overlay-info footer {
-  position: absolute;
-  bottom: 20px;
-  left: 20px;
-}
-.overlay-info footer a{
+.overlay-info footer a {
   color: #fff;
   margin-right: 10px;
-  font-size: 1.2rem;
+  font-size: 1.2em;
   padding: 10px;
+}
+
+@media screen and (max-width: 400px) {
+  .project-card .overlay-info {
+    font-size: 13px;
+  }
+}
+@media screen and (max-width: 350px) {
+  .project-card .overlay-info {
+    font-size: 11px;
+  }
 }
